--- a/mern-charts/server/values.yaml
+++ b/mern-charts/server/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 3
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: minabf/mern-app-server
+  repository: minabf/mern-server
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
